--- a/app/src/main/res/layout/each_row_notification.xml
+++ b/app/src/main/res/layout/each_row_notification.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/dp_15"
+    android:layout_marginStart="@dimen/dp_24"
     android:background="@drawable/bg_notification_item"
     android:padding="@dimen/dp_13">
 
