--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -79,7 +79,7 @@
         android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/glEndMain"
-        android:paddingBottom="@dimen/dp_24"
+        android:paddingBottom="@dimen/dp_14"
         android:clipToPadding="false"
         app:layout_constraintStart_toStartOf="@id/glStartMain"
         app:layout_constraintTop_toBottomOf="@id/tvSelectedDate">
@@ -106,6 +106,7 @@
                 android:layout_height="0dp"
                 android:layout_marginEnd="@dimen/dp_21"
                 android:background="@drawable/bg_rounded_corners_12"
+                android:backgroundTint="#4DB94E"
                 android:padding="@dimen/dp_9"
                 app:layout_constraintBottom_toBottomOf="@id/clLastActivityLogged"
                 app:layout_constraintEnd_toStartOf="@id/clLastActivityLogged"
@@ -119,7 +120,7 @@
                     android:layout_marginTop="@dimen/dp_8"
                     android:gravity="center"
                     android:text="@string/label_latest_temperature_reading"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/sp_15"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -133,7 +134,7 @@
                     android:layout_marginTop="@dimen/dp_9"
                     android:gravity="center"
                     android:text="36.5°C"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/sp_18"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -148,7 +149,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_14"
                 android:background="@drawable/bg_rounded_corners_12"
-                android:backgroundTint="#DBE5FB"
+                android:backgroundTint="#4DB94E"
                 android:padding="@dimen/dp_9"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/clLatestTemp"
@@ -161,7 +162,7 @@
                     android:layout_marginTop="@dimen/dp_8"
                     android:gravity="center"
                     android:text="@string/label_last_activity_logged"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/sp_15"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -176,7 +177,7 @@
                     android:layout_marginBottom="@dimen/dp_11"
                     android:gravity="center"
                     android:text="@string/menstruation_nday_2"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/sp_18"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -205,7 +206,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_14"
                 android:background="@drawable/bg_rounded_corners_12"
-                android:backgroundTint="#FFE8EE"
+                android:backgroundTint="#AAF8EA"
                 android:padding="@dimen/dp_12"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -250,7 +251,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/bg_rounded_corners"
-                        android:backgroundTint="@color/colorPinkDC3556"
+                        android:backgroundTint="#40A997"
                         android:paddingHorizontal="@dimen/dp_12"
                         android:paddingVertical="@dimen/dp_5"
                         android:text="Yes"
@@ -281,7 +282,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_14"
                 android:background="@drawable/bg_rounded_corners_12"
-                android:backgroundTint="#FFEBE1"
+                android:backgroundTint="#C0EBFF"
                 android:padding="@dimen/dp_12"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -326,7 +327,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/bg_rounded_corners"
-                        android:backgroundTint="@color/colorPinkDC3556"
+                        android:backgroundTint="#569EBF"
                         android:paddingHorizontal="@dimen/dp_12"
                         android:paddingVertical="@dimen/dp_5"
                         android:text="Yes"
@@ -374,7 +375,6 @@
                 android:paddingVertical="@dimen/dp_5"
                 android:layout_marginEnd="@dimen/dp_3"
                 android:text="@string/btn_tap_to_scan"
-                android:textColor="@color/black"
                 android:textSize="@dimen/sp_15"
                 app:layout_constraintBottom_toBottomOf="@id/tvConnectBluetooth"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -407,6 +407,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dp_11"
                     android:backgroundTint="@color/white"
+                    android:drawableTint="@color/black"
                     android:fontFamily="@font/geist_regular"
                     android:paddingHorizontal="@dimen/dp_10"
                     android:paddingVertical="@dimen/dp_5"
@@ -496,22 +497,34 @@
                 android:paddingVertical="@dimen/dp_5"
                 android:layout_marginEnd="@dimen/dp_3"
                 android:text="@string/btn_view_all"
-                android:textColor="@color/black"
                 android:textSize="@dimen/sp_15"
                 app:layout_constraintBottom_toBottomOf="@id/tvCalendarLabel"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/tvCalendarLabel" />
 
-            <com.kizitonwose.calendar.view.WeekCalendarView
-                android:id="@+id/weekCalendarView"
+            <com.google.android.material.card.MaterialCardView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                app:cardCornerRadius="@dimen/dp_15"
                 android:layout_marginTop="@dimen/dp_15"
-                app:cv_dayViewResource="@layout/week_calendar_day_view"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:cv_daySize="rectangle"
+                android:elevation="@dimen/dp_2"
+                android:layout_marginBottom="@dimen/dp_10"
+                app:strokeColor="#E6E6E6"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:strokeWidth="@dimen/dp_1"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvCalendarLabel" />
+                app:layout_constraintTop_toBottomOf="@id/tvCalendarLabel">
+
+                <com.kizitonwose.calendar.view.WeekCalendarView
+                    android:id="@+id/weekCalendarView"
+                    android:layout_width="match_parent"
+                    android:layout_margin="@dimen/dp_12"
+                    android:layout_height="wrap_content"
+                    app:cv_dayViewResource="@layout/week_calendar_day_view"
+                    app:cv_daySize="rectangle" />
+
+            </com.google.android.material.card.MaterialCardView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
