--- a/app/src/main/res/drawable/bg_bluetooth_device_item.xml
+++ b/app/src/main/res/drawable/bg_bluetooth_device_item.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="@dimen/dp_100"/>
-    <stroke android:color="#D5D5D5"
-        android:width="@dimen/dp_1"/>
-    <solid android:color="@color/white"/>
+    <solid android:color="#C3F4C4"/>
 </shape>
