--- a/app/src/main/res/drawable/ic_bluetooth_item.xml
+++ b/app/src/main/res/drawable/ic_bluetooth_item.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="39">
   <path
       android:pathData="M19.5,0L19.5,0A19.5,19.5 0,0 1,39 19.5L39,19.5A19.5,19.5 0,0 1,19.5 39L19.5,39A19.5,19.5 0,0 1,0 19.5L0,19.5A19.5,19.5 0,0 1,19.5 0z"
-      android:fillColor="#DC3556"/>
+      android:fillColor="#ffffff"/>
   <group>
     <clip-path
         android:pathData="M8,8.5h22v22h-22z"/>
@@ -17,7 +17,7 @@
           android:strokeLineJoin="round"
           android:strokeWidth="1.28906"
           android:fillColor="#00000000"
-          android:strokeColor="#ffffff"
+          android:strokeColor="#2A9D1F"
           android:strokeLineCap="round"/>
       <group>
         <clip-path
@@ -27,7 +27,7 @@
             android:strokeLineJoin="round"
             android:strokeWidth="1.28906"
             android:fillColor="#00000000"
-            android:strokeColor="#ffffff"
+            android:strokeColor="#2A9D1F"
             android:strokeLineCap="round"/>
       </group>
     </group>
