--- a/app/src/main/res/drawable/ic_password_reset_success.xml
+++ b/app/src/main/res/drawable/ic_password_reset_success.xml
@@ -1,31 +1,43 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="120dp"
     android:height="120dp"
     android:viewportWidth="120"
     android:viewportHeight="120">
   <path
       android:pathData="M60,60m-60,0a60,60 0,1 1,120 0a60,60 0,1 1,-120 0"
-      android:fillColor="#FFBBCE"
-      android:fillAlpha="0.4"/>
+      android:fillColor="#58BC4B"
+      android:fillAlpha="0.16"/>
   <path
-      android:pathData="M60,60m-50,0a50,50 0,1 1,100 0a50,50 0,1 1,-100 0"
-      android:fillColor="#FF83A6"
-      android:fillAlpha="0.67"/>
+      android:pathData="M60,60m-50,0a50,50 0,1 1,100 0a50,50 0,1 1,-100 0">
+    <aapt:attr name="android:fillColor">
+      <gradient
+          android:startX="60"
+          android:startY="10"
+          android:endX="60"
+          android:endY="110"
+          android:type="linear">
+        <item android:offset="0" android:color="#FF46B74F"/>
+        <item android:offset="1" android:color="#FF7AC642"/>
+      </gradient>
+    </aapt:attr>
+  </path>
   <path
       android:pathData="M60,60m-40,0a40,40 0,1 1,80 0a40,40 0,1 1,-80 0"
-      android:fillColor="#FFBBCE"/>
+      android:fillColor="#53BB4C"
+      android:fillAlpha="0.26"/>
   <path
       android:pathData="M60,76.67C69.17,76.67 76.67,69.17 76.67,60C76.67,50.83 69.17,43.33 60,43.33C50.83,43.33 43.33,50.83 43.33,60C43.33,69.17 50.83,76.67 60,76.67Z"
       android:strokeLineJoin="round"
       android:strokeWidth="1.8"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:strokeColor="#ffffff"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M52.92,60L57.63,64.72L67.08,55.28"
       android:strokeLineJoin="round"
       android:strokeWidth="1.8"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:strokeColor="#ffffff"
       android:strokeLineCap="round"/>
 </vector>
